--- a/style/global.css
+++ b/style/global.css
@@ -1,16 +1,3 @@
-/* Reset and base styling */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    height: 100%;
-    font-family: Arial, sans-serif;
-    margin: 0;
-}
-
 body {
     display: flex;
     justify-content: center;
